# ESP32_hardware_basic

./: README.md  test.c
accelerometer/: CMakeLists.txt
accelerometer/main/: CMakeLists.txt  accelerometer.c  accelerometer.h  led.c  make_beep.c
button/: CMakeLists.txt
button/main/: CMakeLists.txt  button.c
creative/: CMakeLists.txt
creative/components/: CMakeLists.txt  get_data_dht11.c  get_temperature_and_humidity.c
creative/components/inc/: creative.h  graphic.h
creative/main/: CMakeLists.txt  accelerometer.c  change_screen.c  create_arr.c  creative.c  creative.h  fill_screen_0_or_1.c  font6x8.h  get_data_dht11.c  get_temperature_and_humidity.c  init_display.c  init_i2c.c  make_beep.c  power_on_acce.c  power_on_dht11.c  power_on_oled.c  reinit_display.c  screen_onto_display.c  select_screen.c  str_in_screen.c  update_display.c
creative/main/inc/: CMakeLists.txt
dht11/main/: CMakeLists.txt  dht11.c
hellow_world_on_monitor/: CMakeLists.txt
hellow_world_on_monitor/main/: CMakeLists.txt  hello_world.c
led_on/: CMakeLists.txt
led_on/main/: led.c
oled/: CMakeLists.txt
oled/main/: CMakeLists.txt  oled.h
pulse_led_use_PWM_DAC/: CMakeLists.txt
pulse_led_use_PWM_DAC/main/: CMakeLists.txt  pulse.c
t04/: CMakeLists.txt
t04/main/: dht11.c
t07/main/: CMakeLists.txt  oled.c
uart/: CMakeLists.txt
uart/main/: CMakeLists.txt  uart.c
